y.output
   0  $accept : file $end

   1  file : prog
   2       | mod

   3  prog : PROGRAM END

   4  mod : MODULE END

state 0
	$accept : . file $end  (0)

	PROGRAM  shift 1
	MODULE  shift 2
	.  error

	file  goto 3
	prog  goto 4
	mod  goto 5


state 1
	prog : PROGRAM . END  (3)

	END  shift 6
	.  error


state 2
	mod : MODULE . END  (4)

	END  shift 7
	.  error


state 3
	$accept : file . $end  (0)

	$end  accept


state 4
	file : prog .  (1)

	.  reduce 1


state 5
	file : mod .  (2)

	.  reduce 2


state 6
	prog : PROGRAM END .  (3)

	.  reduce 3


state 7
	mod : MODULE END .  (4)

	.  reduce 4


53 terminals, 4 nonterminals
5 grammar rules, 8 states
